--- a/recpies/spageti.html
+++ b/recpies/spageti.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spageti</title>
 </head>
 <body>
-    <h1>Donmsz Recipes</h1>
-    <a href="/recpies/spageti.html">Spageti Recipe</a>
+    <h1>Spageti</h1>
 </body>
 </html>
