--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 </head>
 <body>
     <h1>Donmsz Recipes</h1>
-    <a href="/recpies/spageti.html">Spageti Recipe</a>
+    <a href="./recpies/spageti.html">Spageti Recipe</a>
+    <img src="images/spageti.jpg" alt="">
+    <h2>Description</h2>
+    <p>buy spageti</p>
+    <p>eat</p>
+    <ul>
+        <li>makaroni</li>
+        <li>seroni</li>
+        <li>sosoni</li>
+    </ul>
+    <ol>
+        <li>buy</li>
+        <li>eat</li>
+        <li>repeat</li>
+    </ol>
 </body>
 </html>
